Übung Silent Moon

--- a/3_2bonusSilent/index.html
+++ b/3_2bonusSilent/index.html
@@ -10,9 +10,39 @@
 </head>
 
 <body>
+    <header>
+        <article>
+            <p>Silent</p><img src="assets/img/logo.png" alt="LOGO">
+            <p>Moon</p>
+        </article>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">About</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Login</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h1>Welcome to Silent Moon</h1>
+            <p>Explore the app, Find some peace of mind to prepare for meditation.</p>
+            <a href="#">Get started</a>
+        </section>
+        <article>
+            <img src="assets/img/circle_bg.png" alt="">
+            <img src="assets/img/clouds1.png" alt="">
+            <img src="assets/img/clouds2.png" alt="">
+            <img src="assets/img/woman_meditating.png" alt="">
+        </article>
+        
+    </main>
+    <footer></footer>
 
     <script src="https://kit.fontawesome.com/414a930ca8.js" crossorigin="anonymous"></script>
-    
+
 </body>
 
 
