--- a/3_1bonusMinimalism/index.html
+++ b/3_1bonusMinimalism/index.html
@@ -5,56 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Übungsprojekt Minimalism</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
+    <!-- /* ----------------HEADER--------------- */ -->
 
     <header>
-        <img src="assets/img/Mlogo.png" alt="">
-        <a href="#">Log in/Sign up</a>
+        <section>
+            <img src="assets/img/Mlogo.png" alt="">
+            <div>
+                <a href="#">Log in/Sign up</a>
+            </div>
+        </section>
+
+        <!-- /* ----------------HEADER NAV--------------- */ -->
+
         <nav>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Services</a></li>
-                <li><a href="#">ICON BAG</a></li>
-                <li><a href="#">ICON MENU</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        <article>
-            <h1>Minimalism at its finest.</h1>
-            <p>Shop all</p>
-        </article>
-        <div><img src="assets/img/1.jpeg" alt="">
-            <p>Kitchen</p>
-        </div>
-        <div><img src="assets/img/2.jpeg" alt="">
-            <p>Bathroom</p>
-        </div>
-        <div><img src="assets/img/3.webp" alt="">
-            <p>Lighting</p>
-        </div> 
 
-        <div>
-            <div>Pfeil links</div>
-            <div>Pfeil rechts</div>
-        </div>
+    <!-- /* ----------------MAIN--------------- */ -->
+
+    <main>
+        <section>
+            <article>
+                <h1>Minimalism at its finest.</h1>
+                <a href="#"> ⎯⎯ Shop all</a>
+            </article>
+            <img src="assets/img/Bild1.jpeg" alt="">
+            <img src="assets/img/Bild2.jpeg" alt="">
+            <img src="assets/img/Bild3.jpeg" alt="">
+        </section>
+
+
     </main>
+    <!-- /* ----------------FOOTER--------------- */ -->
 
     <footer>
-        <ul>
-            <li>Facebook</li>
-            <li>Instagram</li>
-            <li>Twitter</li>
-        </ul>
+        <nav>
+            <ul>
+                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="#"><i class="fab fa-twitter"></i></i></a></li>
+            </ul>
+        </nav>
     </footer>
 
     <script src="https://kit.fontawesome.com/414a930ca8.js" crossorigin="anonymous"></script>
 
 </body>
+
 </html>
