--- a/3_2bonusSilent/index.html
+++ b/3_2bonusSilent/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Übung Silent Moon : Position absolute-relative</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
@@ -37,7 +37,7 @@
             <img src="assets/img/clouds2.png" alt="">
             <img src="assets/img/woman_meditating.png" alt="">
         </article>
-        
+
     </main>
     <footer></footer>
 
