--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
             <!-- test -->
             <h2>Übungsaufgaben Inhaltsverzeichnis vom 06.01.2022</h2>
             <ul>
-                <li><a target="_blank" rel="noopener noreferrer" href="1_1/index.html">Aufgabe 1_1</a></li>
-                <li><a target="_blank" rel="noopener noreferrer" href="3_2/index.html">Aufgabe 3_2</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="1_1/index.html">Aufgabe 1_1 Everest</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="3_2/index.html">Aufgabe 3_2 Error</a></li>
+                <li><a target="_blank" rel="noopener noreferrer" href="3_1bonusMinimalism/index.html">Aufgabe
+                        3_1 Bonus Minimalism</a></li>
+
+                <li><a target="_blank" rel="noopener noreferrer" href="3_2bonusSilent/index.html">Aufgabe
+                        3_2 Bonus Silent Moon</a></li>
+
             </ul>
             <a href="https://karin-supercode.github.io/06012022/">Github page:
                 https://karin-supercode.github.io/06012022/</a><br>
